# CppUtilityLib

./: .gitignore  CMakeLists.txt  README.md
include/cpputility/: algorithms.hpp
include/cpputility/containers/: iterator.hpp  reference_vector.hpp  storage_vector.hpp  vector_base.hpp  vector_slice.hpp  vector_view.hpp
tests/: CMakeLists.txt  dummy.cpp
